--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ body, html {
 <div class="w3-content w3-container w3-padding-64" id="about">
     <div class="w3-row">
         <div class="w3-col m6 w3-center w3-padding-large">
-        <img src="phua2.jpg" class="w3-round w3-image" alt="Photo of Me" width="500" height="333">
+        <img src="https://drive.google.com/file/d/1u17AkFfgdlIVqjbaji4biy2w1t3f_9jy/view?usp=sharing" class="w3-round w3-image" alt="Photo of Me" width="500" height="333">
     </div>
 
     <!-- Hide this text on small devices -->
