--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -9,65 +8,57 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
-body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif;}
-body, html {
-  height: 100%;
-  color: #777;
-  line-height: 1.8;
-}
-
-/* Create a Parallax Effect */
-.bgimg-1, .bgimg-2, .bgimg-3,.bgimg-4 {
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-/* First image (Logo. Full height) */
-.bgimg-1 {
-  background-image: url('background5.jpg');
-  min-height: 100%;
-}
-
-/* Second image (Portfolio) */
-.bgimg-2 {
-  background-image: url("background2.jpg");
-  min-height: 400px;
-}
-
-/* Third image (Contact) */
-.bgimg-3 {
-  background-image: url("background4.jpg");
-  min-height: 400px;
-}
-
-/* Third image (Contact) */
-.bgimg-4 {
-  background-image: url("background3.jpg");
-  min-height: 400px;
-}
-
-.w3-wide {letter-spacing: 10px;}
-.w3-hover-opacity {cursor: pointer;}
-
-/* Turn off parallax scrolling for tablets and phones */
-@media only screen and (max-device-width: 1600px) {
-  .bgimg-1, .bgimg-2, .bgimg-3,.bgimg-4 {
-    background-attachment: scroll;
-    min-height: 400px;
-  }
-}
-</style>
-<script>
-    // Modal Image Gallery
-    function onClick(element) {
-      document.getElementById("img01").src = element.src;
-      document.getElementById("modal01").style.display = "block";
-      var captionText = document.getElementById("caption");
-      captionText.innerHTML = element.alt;
+    body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif;}
+    body, html {
+        height: 100%;
+        color: #777;
+        line-height: 1.8;
     }
-    
+
+    /* Create a Parallax Effect */
+    .bgimg-1, .bgimg-2, .bgimg-3,.bgimg-4 {
+        background-attachment: fixed;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
+
+    /* First image (Logo. Full height) */
+    .bgimg-1 {
+        background-image: url('background5.jpg');
+        min-height: 100%;
+    }
+
+    /* Second image (Portfolio) */
+    .bgimg-2 {
+        background-image: url("background2.jpg");
+        min-height: 400px;
+    }
+
+    /* Third image (Contact) */
+    .bgimg-3 {
+        background-image: url("background4.jpg");
+        min-height: 400px;
+    }
+
+    /* Third image (Contact) */
+    .bgimg-4 {
+        background-image: url("background3.jpg");
+        min-height: 400px;
+    }
+
+    .w3-wide {letter-spacing: 10px;}
+    .w3-hover-opacity {cursor: pointer;}
+
+    /* Turn off parallax scrolling for tablets and phones */
+    @media only screen and (max-device-width: 1600px) {
+        .bgimg-1, .bgimg-2, .bgimg-3, .bgimg-4 {
+            background-attachment: scroll;
+            min-height: 400px;
+        }
+    }
+</style>
+<script>    
     // Change style of navbar on scroll
     window.onscroll = function() {myFunction()};
     function myFunction() {
@@ -91,30 +82,27 @@ body, html {
     </script>
 </head>
 <body>
-
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
     <div class="w3-bar" id="myNavbar">
-        <a class="w3-bar-item w3-button w3-hover-black w3-hide-medium w3-hide-large w3-right" href="javascript:void(0);" onclick="toggleFunction()" title="Toggle Navigation Menu">
-        <i class="fa fa-bars"></i></a>
+        <a class="w3-bar-item w3-button w3-hover-black w3-hide-medium w3-hide-large w3-right" href="javascript:void(0);" onclick="toggleFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
         <a href="#home" class="w3-bar-item w3-button">HOME</a>
         <a href="#personalInfo" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-user"></i> PERSONAL INFO</a>
         <a href="#tools" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-code"></i> TOOLS</a>
         <a href="#contact" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-envelope"></i> CONTACT</a>
-        <a href="#" class="w3-bar-item w3-button w3-hide-small w3-right w3-hover-red">
-        <i class="fa fa-search"></i></a>
+        <a href="#" class="w3-bar-item w3-button w3-hide-small w3-right w3-hover-red"><i class="fa fa-search"></i></a>
     </div>
 
     <!-- Navbar on small screens -->
     <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium">
-        <a href="#personalInfp" class="w3-bar-item w3-button" onclick="toggleFunction()">PERSONAL INFO</a>
+        <a href="#personalInfo" class="w3-bar-item w3-button" onclick="toggleFunction()">PERSONAL INFO</a>
         <a href="#tools" class="w3-bar-item w3-button" onclick="toggleFunction()">TOOLS</a>
         <a href="#contact" class="w3-bar-item w3-button" onclick="toggleFunction()">CONTACT</a>
         <a href="#" class="w3-bar-item w3-button">SEARCH</a>
     </div>
 </div>
 
-<!-- First Parallax Image with Logo Text -->
+<!-- First Parallax Image with Phua Yu Cheng Text -->
 <div class="bgimg-1 w3-display-container w3-opacity-min" id="home">
     <div class="w3-display-middle" style="white-space:nowrap;">
         <span class="w3-center w3-round w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity"><b><i class="fa fa-user w3-margin-right"></i>PHUA YU CHENG</b></span>
@@ -125,7 +113,7 @@ body, html {
 <div class="w3-content w3-container w3-padding-64" id="about">
     <div class="w3-row">
         <div class="w3-col m6 w3-center w3-padding-large">
-        <img src="https://drive.google.com/file/d/1u17AkFfgdlIVqjbaji4biy2w1t3f_9jy/view?usp=sharing" class="w3-round w3-image" alt="Photo of Me" width="500" height="333">
+        <img src="phua2.jpg" class="w3-round w3-image" alt="Photo of Me" width="500" height="333">
     </div>
 
     <!-- Hide this text on small devices -->
@@ -137,30 +125,28 @@ body, html {
 </div>
 </div>
 
-
-
-  <!-- Second Parallax Image with Portfolio Text -->
-  <div class="bgimg-2 w3-display-container w3-opacity-min">
+<!-- Second Parallax Image with Personal Info Text -->
+<div class="bgimg-2 w3-display-container w3-opacity-min">
     <div class="w3-display-middle">
-      <span class="w3-xxlarge w3-text-white w3-wide">PERSONAL INFO</span>
+        <span class="w3-xxlarge w3-text-white w3-wide">PERSONAL INFO</span>
     </div>
-  </div>
+</div>
 
-<!-- Container (Portfolio Section) -->
+<!-- Container (Personal Info Section) -->
 <div class="w3-content w3-container w3-padding-64" id="personalInfo">
     <p class="w3-large w3-center w3-padding-16">Im really good at:</p>
-  <p class="w3-wide"><i class="fa fa-camera"></i>Photography</p>
-  <div class="w3-light-grey w3-round">
-    <div class="w3-container w3-padding-small w3-dark-grey w3-center w3-round" style="width:90%">90%</div>
-  </div>
-  <p class="w3-wide"><i class="fa fa-laptop"></i>Web Design</p>
-  <div class="w3-light-grey w3-round">
-    <div class="w3-container w3-padding-small w3-dark-grey w3-center w3-round" style="width:85%">85%</div>
-  </div>
-  <p class="w3-wide"><i class="fa fa-photo"></i>Photoshop</p>
-  <div class="w3-light-grey w3-round">
-    <div class="w3-container w3-padding-small w3-dark-grey w3-center w3-round" style="width:75%">75%</div>
-  </div>
+    <p class="w3-wide"><i class="fa fa-camera"></i>Photography</p>
+    <div class="w3-light-grey w3-round">
+        <div class="w3-container w3-padding-small w3-dark-grey w3-center w3-round" style="width:90%">90%</div>
+    </div>
+    <p class="w3-wide"><i class="fa fa-laptop"></i>Web Design</p>
+    <div class="w3-light-grey w3-round">
+        <div class="w3-container w3-padding-small w3-dark-grey w3-center w3-round" style="width:85%">85%</div>
+    </div>
+    <p class="w3-wide"><i class="fa fa-photo"></i>Photoshop</p>
+    <div class="w3-light-grey w3-round">
+        <div class="w3-container w3-padding-small w3-dark-grey w3-center w3-round" style="width:75%">75%</div>
+    </div>
     <div class="w3-row-padding w3-center">
         <a href="personalInfo.html">
             <button class="w3-button w3-round w3-padding-large w3-light-grey" style="margin-top:64px">Go to my Personal Info</button>
@@ -168,97 +154,76 @@ body, html {
     </div>
   </div>
 
-
 <div class="w3-row w3-center w3-dark-grey w3-padding-16">
-  <div class="w3-quarter w3-section">
-    <span class="w3-xlarge">3.99</span><br>
-    CGPA
-  </div>
-  <div class="w3-quarter w3-section">
-    <span class="w3-xlarge">8A+</span><br>
-    SPM
-  </div>
-  <div class="w3-quarter w3-section">
-    <span class="w3-xlarge">5A+</span><br>
-    PT3
-  </div>
-  <div class="w3-quarter w3-section">
-    <span class="w3-xlarge">3A+</span><br>
-    UPSR
-  </div>
+    <div class="w3-quarter w3-section">
+        <span class="w3-xlarge">3.99</span><br>
+        CGPA
+    </div>
+    <div class="w3-quarter w3-section">
+        <span class="w3-xlarge">8A+</span><br>
+        SPM
+    </div>
+    <div class="w3-quarter w3-section">
+        <span class="w3-xlarge">5A+</span><br>
+        PT3
+    </div>
+    <div class="w3-quarter w3-section">
+        <span class="w3-xlarge">3A+</span><br>
+        UPSR
+    </div>
 </div>
 
-
-
-
-
-<!-- Second Parallax Image with TOOLS Text -->
+<!-- Third Parallax Image with TOOLS Text -->
 <div class="bgimg-4 w3-display-container w3-opacity-min">
-  <div class="w3-display-middle">
-    <span class="w3-xxlarge w3-text-white w3-wide">TOOLS</span>
-  </div>
+    <div class="w3-display-middle">
+        <span class="w3-xxlarge w3-text-white w3-wide">TOOLS</span>
+    </div>
 </div>
-
-
-
 
 <!-- Container (TOOLS Section) -->
 <div class="w3-content w3-container w3-padding-64" id="tools">
-  <h3 class="w3-center">MY WORK</h3>
-  <p class="w3-center"><em>Here are some of my latest coding program.<br> Click on the button to use it.</em></p><br>
+    <h3 class="w3-center">MY WORK</h3>
+    <p class="w3-center"><em>Here are some of my latest coding program.<br> Click on the button to use it.</em></p><br>
+    <div class="w3-row-padding w3-center w3-section">
+        <div class="w3-col m3">
+            <img src="calculator.png" style="width:100%">
+            Calculator
+        </div>
 
-  <!-- Responsive Grid. Four columns on tablets, laptops and desktops. Will stack on mobile devices/small screens (100% width) -->
+        <div class="w3-col m3">
+            <img src="bmi.jpg" style="width:100%">
+            BMI Checker
+        </div>
 
+        <div class="w3-col m3">
+            <img src="income.jpg" style="width:100%">
+            Zakat Calculator
+        </div>
 
-  <div class="w3-row-padding w3-center w3-section">
-    <div class="w3-col m3">
-      <img src="calculator.png" style="width:100%">
-      Calculator
+        <div class="w3-col m3">
+            <img src="unit.jpg" style="width:100%">
+            Unit Converter
+        </div>
+        <div class="w3-row-padding w3-center">
+            <a href="tools.html">
+                <button class="w3-button w3-round w3-padding-large w3-light-grey" style="margin-top:64px">Go to my Tools</button>
+            </a>
+        </div>
     </div>
-
-    <div class="w3-col m3">
-      <img src="bmi.jpg" style="width:100%">
-      BMI Checker
-    </div>
-
-    <div class="w3-col m3">
-      <img src="income.jpg" style="width:100%">
-      Zakat Calculator
-    </div>
-
-    <div class="w3-col m3">
-      <img src="unit.jpg" style="width:100%">
-      Unit Converter
-    </div>
-    <div class="w3-row-padding w3-center">
-        <a href="tools.html">
-            <button class="w3-button w3-round w3-padding-large w3-light-grey" style="margin-top:64px">Go to my Tools</button>
-        </a>
-    </div>
-  </div>
 </div>
 
-<!-- Modal for full size images on click-->
-<div id="modal01" class="w3-modal w3-black" onclick="this.style.display='none'">
-  <span class="w3-button w3-large w3-black w3-display-topright" title="Close Modal Image"><i class="fa fa-remove"></i></span>
-  <div class="w3-modal-content w3-animate-zoom w3-center w3-transparent w3-padding-64">
-    <img id="img01" class="w3-image">
-    <p id="caption" class="w3-opacity w3-large"></p>
-  </div>
-</div>
-
-<!-- Third Parallax Image with Portfolio Text -->
+<!-- Forth Parallax Image with Contact Text -->
 <div class="bgimg-3 w3-display-container w3-opacity-min">
-  <div class="w3-display-middle">
-     <span class="w3-xxlarge w3-text-white w3-wide">CONTACT</span>
-  </div>
+    <div class="w3-display-middle">
+        <span class="w3-xxlarge w3-text-white w3-wide">CONTACT</span>
+    </div>
 </div>
 
 <!-- Container (Contact Section) -->
 <div class="w3-content w3-container w3-padding-64" id="contact">
     <h3 class="w3-center">WHERE I WORK</h3>
     <p class="w3-center"><em>I'd love your feedback!</em></p>
-
+    
     <div class="w3-row w3-padding-32 w3-section">
         <div class="w3-col m12 w3-container" style="position: relative; height: 400px; background: url('map.jpg') no-repeat center center/cover; border-radius: 10px;">
             <div class="w3-panel w3-padding w3-dark-grey w3-opacity w3-round w3-right w3-margin" style="width: 30%; bottom: 15px; position: absolute; right: 15px;">
@@ -272,20 +237,16 @@ body, html {
     </div>
 </div>
 
-
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-64 w3-opacity w3-hover-opacity-off">
-  <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
-  <div class="w3-xlarge w3-section">
-    <a href = "https://www.facebook.com/phua.john.7/"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
-    <a href = "https://www.instagram.com/johnphuayc?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><i class="fa fa-instagram w3-hover-opacity"></i></a>
-    <a href = "https://www.linkedin.com/in/john-phua-6a72952b4/"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
-  </div>
-  <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a></p>
+    <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
+    <div class="w3-xlarge w3-section">
+        <a href = "https://www.facebook.com/phua.john.7/"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
+        <a href = "https://www.instagram.com/johnphuayc?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><i class="fa fa-instagram w3-hover-opacity"></i></a>
+        <a href = "https://www.linkedin.com/in/john-phua-6a72952b4/"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
+    </div>
+    <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a></p>
 </footer>
- 
-
-
 </body>
 </html>
 
