--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 <div class="w3-content w3-container w3-padding-64" id="about">
     <div class="w3-row">
         <div class="w3-col m6 w3-center w3-padding-large">
-        <img src="phua2.jpg" class="w3-round w3-image" alt="Photo of Me" width="500" height="333">
+        <img src="phua2.JPG" class="w3-round w3-image" alt="Photo of Me" width="500" height="333">
     </div>
 
     <!-- Hide this text on small devices -->
