--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     <div class="w3-col m6 w3-hide-small w3-padding-large">
         <h3><b>ABOUT ME</b></h3>
         <br>
-        <h4>Welcome to my website.<br>I love technology and problem-solving.</h4>
+        <h4>Welcome to my website.<br>I’m passionate about technology, problem-solving, and creating solutions that make an impact.</h4>
     </div>
 </div>
 </div>
@@ -160,15 +160,15 @@
         CGPA
     </div>
     <div class="w3-quarter w3-section">
-        <span class="w3-xlarge">8A+</span><br>
+        <span class="w3-xlarge">4A</span><br>
         SPM
     </div>
     <div class="w3-quarter w3-section">
-        <span class="w3-xlarge">5A+</span><br>
+        <span class="w3-xlarge">3A</span><br>
         PT3
     </div>
     <div class="w3-quarter w3-section">
-        <span class="w3-xlarge">3A+</span><br>
+        <span class="w3-xlarge">3A</span><br>
         UPSR
     </div>
 </div>
@@ -229,8 +229,8 @@
             <div class="w3-panel w3-padding w3-dark-grey w3-opacity w3-round w3-right w3-margin" style="width: 30%; bottom: 15px; position: absolute; right: 15px;">
                 <div class="w3-large w3-margin-bottom">
                     <i class="fa fa-map-marker fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i>Kolej 10, UTM JB<br>
-                    <i class="fa fa-phone fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i>013 7323888<br>
-                    <i class="fa fa-envelope fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i>johnphua17@gmail.com<br>
+                    <i class="fa fa-phone fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i>0137323888<br>
+                    <i class="fa fa-envelope fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i>johnphuayc@gmail.com<br>
                 </div>
             </div>
         </div>
@@ -249,5 +249,6 @@
 </footer>
 </body>
 </html>
+
 
 
