--- a/personalInfo.html
+++ b/personalInfo.html
@@ -170,7 +170,7 @@
         <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:75%">75%</div>
     </div>
         <div class="w3-row-padding w3-center">
-            <a href="Phua Yu Cheng - CV.pdf" download>
+            <a href="Phua_Yu_Cheng_CV.pdf" download>
                 <button class="w3-button w3-padding-large w3-light-grey" style="margin-top:64px">Download My Resume</button>
             </a>
         </div>
@@ -182,4 +182,5 @@
 </footer>
 </body>
 </html>
+
 
